--- a/style.css
+++ b/style.css
@@ -8,10 +8,15 @@ body{
 html::-webkit-scrollbar {
     width: none;
 }
+.center-out{
+    display: flex;
+    place-content: center;
+}
 .pi-out{
     inline-size: 100vw;
     overflow-wrap: break-word;
     letter-spacing: 10px;
+    width: 80%;
 }
 .cool-links{
     text-align: center;
